documentation, readme update
